[gd_scene load_steps=10 format=2]

[ext_resource path="res://Source/OpenSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Source/image13.png" type="Texture" id=2]
[ext_resource path="res://GUI/Options.gd" type="Script" id=3]
[ext_resource path="res://Source/image 12.png" type="Texture" id=4]
[ext_resource path="res://Source/image 11.png" type="Texture" id=5]
[ext_resource path="res://Source/image 10.png" type="Texture" id=6]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_left = 0.392
anchor_top = 0.31
anchor_right = 0.608
anchor_bottom = 0.562
margin_left = -0.40799
margin_right = 0.407959
margin_bottom = -0.200012
mouse_filter = 1
script = ExtResource( 3 )

[node name="TextureRect2" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 2 )
expand = true

[node name="ReferenceRect" type="ReferenceRect" parent="TextureRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
border_color = Color( 0, 0, 0, 1 )
editor_only = false

[node name="Button_print" type="TextureButton" parent="TextureRect2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -111.0
margin_right = 111.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="TextureRect2/Button_print"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -171.0
margin_top = -11.0
margin_right = -15.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Печатать документ"
valign = 1

[node name="TextureRect" type="TextureRect" parent="TextureRect2/Button_print"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 15.0
margin_top = -11.0
margin_right = 37.0
margin_bottom = 11.0
texture = ExtResource( 6 )
expand = true

[node name="Button_save" type="TextureButton" parent="TextureRect2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -111.0
margin_top = 50.0
margin_right = 111.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( -470, -81 )

[node name="TextureRect" type="TextureRect" parent="TextureRect2/Button_save"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 15.0
margin_top = -11.0
margin_right = 37.0
margin_bottom = 11.0
texture = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="TextureRect2/Button_save"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -171.0
margin_top = -11.0
margin_right = -15.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Открыть в Word"
valign = 1

[node name="TextureRect2" type="TextureRect" parent="TextureRect2/Button_save"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 15.0
margin_top = -11.0
margin_right = 37.0
margin_bottom = 11.0
texture = ExtResource( 4 )
expand = true

[node name="Label2" type="Label" parent="TextureRect2/Button_save"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -171.0
margin_top = -11.0
margin_right = -11.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Сохранить документ"
valign = 1

[node name="Button_hepl" type="TextureButton" parent="TextureRect2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -111.0
margin_top = 100.0
margin_right = 111.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( -402, -160 )

[node name="TextureRect" type="TextureRect" parent="TextureRect2/Button_hepl"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 15.0
margin_top = -11.0
margin_right = 37.0
margin_bottom = 11.0
texture = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="TextureRect2/Button_hepl"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -171.0
margin_top = -11.0
margin_right = -11.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Сохранить документ"
valign = 1

[node name="TextureRect2" type="TextureRect" parent="TextureRect2/Button_hepl"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 15.0
margin_top = -11.0
margin_right = 35.0
margin_bottom = 11.0
texture = ExtResource( 2 )
expand = true

[node name="Label2" type="Label" parent="TextureRect2/Button_hepl"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -171.0
margin_top = -11.0
margin_right = -15.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Справка"
valign = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="mouse_entered" from="TextureRect2/Button_print" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect2/Button_print" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="TextureRect2/Button_print" to="." method="_on_Button_print_pressed"]
[connection signal="mouse_entered" from="TextureRect2/Button_save" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect2/Button_save" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="TextureRect2/Button_save" to="." method="_on_Button_save_pressed"]
[connection signal="mouse_entered" from="TextureRect2/Button_hepl" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect2/Button_hepl" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="TextureRect2/Button_hepl" to="." method="_on_Button_hepl_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
